# pm3000

./: CMakeLists.txt  README.md
docs/: csv_format_clubs.md  csv_format_players.md  kit_design_patterns.md
tools/: export_kit_data.cpp  fifa_import_full_tool.cpp
